--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -8,16 +8,12 @@
 <body>
 
 {{if .First}}
-USER NAME {{.UserName}}<br>
-FIRST {{.First}}<br>
-LAST {{.Last}}<br>
-<h2>Go to <a href="/bar">the bar</a></h2>
-{{else}}
-<h2>Go to <a href="/login">login</a></h2>
-<h2>Go to <a href="/register">registration page</a></h2>
-{{end}}
-{{if .UserName}}
+Welcome {{.First}} {{.Last}}, username: {{.Username}}
+<h2>Go to <a href="/inventory">the inventory page</a></h2>
 <a href="/logout">Logout</a>
+{{else}}
+<h2>Go to <a href="/login">login page</a></h2>
+<h2>Go to <a href="/register">registration page</a></h2>
 {{end}}
 </body>
 </html>
