--- a/templates/inventory.gohtml
+++ b/templates/inventory.gohtml
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title>Register!</title>
+    <title>Inventory</title>
 </head>
 <body>
 
-<h1>Register New Account!</h1>
-
-<form method="post">
-
-    <input type="email" name="username" placeholder="Email"><br>
-    <input type="text" name="password" placeholder="Password"><br>
-    <input type="text" name="firstname" placeholder="First Name"><br>
-    <input type="text" name="lastname" placeholder="Last Name"><br>
-    <input type="submit">
-
-</form>
+<div class="container">
+    <div class="page-header">
+        <h1>Inventory</h1>
+    </div>
+    
+    <div class="jumbotron">
+        <h1>Welcome {{.First}}
+    </div>
+</div>
 
 </body>
 </html>
